<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_divide"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/divide"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_delete" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"

        android:backgroundTint="#9F9F9F"
        android:text="@string/c"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_eight"
        app:layout_constraintStart_toEndOf="@+id/button_ce" />

    <Button
        android:id="@+id/button_ce"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/ce"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_seven"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#9F9F9F"
        android:drawableLeft="@drawable/backspace"
        android:paddingStart="35dp"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@+id/button_c"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/eight"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        app:layout_constraintStart_toEndOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/seven"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/nine"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_multi"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/multiple"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/five"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintStart_toEndOf="@+id/button_four" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/four"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_one"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/minus"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_six" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/six"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@+id/button_five" />

    <Button
        android:id="@+id/button_switch"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/plusminus"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_square"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/equal"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_point" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/point"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_zero" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/zero"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_switch" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/one"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_switch"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#9F9F9F"
        android:text="@string/plus"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_square"
        app:layout_constraintStart_toEndOf="@+id/button_three" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/three"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintStart_toEndOf="@+id/button_two" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#D6D3D3"
        android:text="@string/two"
        android:textColor="#040303"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintStart_toEndOf="@+id/button_one" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginBottom="456dp"
        android:background="#C1BEBE"
        android:text="@string/text_start"
        android:textAlignment="textEnd"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result_sub"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#C1BEBE"
        android:lineSpacingExtra="8sp"
        android:textAlignment="viewEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>